tests/sema/fail/v41_fail_unit_sum_non_exhaustive.ep
# COMPILE_FAIL_CONTAINS: non-exhaustive match for State; missing Done
type State = Ready | Done

fun main(): void {
    let state = State.Ready
    match state {
        State.Ready: { ret }
    }
}
